stable marriage finished

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 template
 testdata_tools
 **/submissions
+problem.yaml
+**/data/*.sh
+**/data/*.py
+**/input_format_validators
+**/problem_statement
