--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+template
+testdata_tools
+**/submissions
+problem.yaml
+**/data/*.sh
+**/data/*.py
+**/input_format_validators
+**/problem_statement
+*.out
+*.verd
+.gitignore
 *.swp
